--- a/core/templates/core/estimate_transactions.html
+++ b/core/templates/core/estimate_transactions.html
@@ -100,6 +100,11 @@
                                 </div>
                             </div>
 
+                            <div id="existing-estimate-banner" class="alert alert-warning d-none">
+                                <i class="fas fa-exclamation-triangle me-2"></i>
+                                An existing estimate will be replaced with <span id="existing-estimate-amount">€0.00</span>.
+                            </div>
+
                             <!-- Step-by-Step Calculation Process -->
                             <div class="row">
                                 <div class="col-12">
