Ignore existing estimates when summarising periods

--- a/core/templates/core/estimate_transactions.html
+++ b/core/templates/core/estimate_transactions.html
@@ -322,7 +322,17 @@
                                             </div>
                                         </div>
                                     </div>
-                                    
+
+                                    <div class="row mb-3">
+                                        <div class="col-12">
+                                            <div class="alert alert-secondary text-center">
+                                                <h6 class="alert-heading">Currently Estimating</h6>
+                                                <div class="h4 mb-0" id="detail-currently-estimating">€0.00</div>
+                                                <small>Value after estimate/re-estimate</small>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                     <div class="alert alert-info mb-0">
                                         <div class="d-flex align-items-start">
                                             <i class="fas fa-robot me-2 mt-1"></i>
