fix: load mobile transaction grouping script

--- a/core/templates/core/transaction_list_v2.html
+++ b/core/templates/core/transaction_list_v2.html
@@ -462,6 +462,6 @@
 />
 
 <!-- Custom JavaScript -->
-<script src="{% static 'js/transaction_list_ajax.js' %}" nonce="{{ request.csp_nonce }}"></script>
+<script src="{% static 'js/transaction_list_v2.js' %}" nonce="{{ request.csp_nonce }}"></script>
 
 {% endblock %}
