--- a/core/templates/core/transaction_form.html
+++ b/core/templates/core/transaction_form.html
@@ -79,18 +79,17 @@
         </div>
 
         <!-- INVESTMENT FLOW -->
-        <div class="mb-3 d-none" id="investment-flow">
-          <label class="form-label">{{ form.direction.label }}</label>
+        <div class="mb-3" id="investment-flow" style="display:none;">
+          <label class="form-label">Investment Flow</label>
           <div class="btn-group w-100" role="group">
-            <input type="radio" class="btn-check" name="{{ form.direction.name }}" id="dir_in" value="IN"
-                   {% if form.direction.value != "OUT" %}checked{% endif %}>
+            <input type="radio" class="btn-check" name="direction" id="dir_in" value="IN"
+                   {% if form.initial.direction != "OUT" %}checked{% endif %}>
             <label class="btn btn-outline-success" for="dir_in">Reinforcement</label>
 
-            <input type="radio" class="btn-check" name="{{ form.direction.name }}" id="dir_out" value="OUT"
-                   {% if form.direction.value == "OUT" %}checked{% endif %}>
+            <input type="radio" class="btn-check" name="direction" id="dir_out" value="OUT"
+                   {% if form.initial.direction == "OUT" %}checked{% endif %}>
             <label class="btn btn-outline-danger" for="dir_out">Withdrawal</label>
           </div>
-          {% if form.direction.errors %}<div class="text-danger small">{{ form.direction.errors.0 }}</div>{% endif %}
         </div>
 
         <!-- CATEGORY -->
@@ -147,7 +146,7 @@
 <!-- Flatpickr + Tom Select -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select/dist/css/tom-select.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr" nonce="{{ request.csp_nonce }}"></script>
-<script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js" nonce="{{ request.csp_nonce }}"></script>
-<script src="{% static 'js/transaction_form.js' %}" nonce="{{ request.csp_nonce }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js"></script>
+<script src="{% static 'js/transaction_form.js' %}"></script>
 {% endblock %}
