Use Bootstrap class for investment flow toggle

--- a/core/templates/core/transaction_form.html
+++ b/core/templates/core/transaction_form.html
@@ -5,7 +5,7 @@
 
 {% block title %}
 {% if form.instance.pk %}Edit Transaction{% else %}New Transaction{% endif %} - OurFinanceTracker
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
 <div class="container mt-4">
@@ -79,7 +79,7 @@
         </div>
 
         <!-- INVESTMENT FLOW -->
-        <div class="mb-3" id="investment-flow" style="display:none;">
+        <div class="mb-3 d-none" id="investment-flow">
           <label class="form-label">Investment Flow</label>
           <div class="btn-group w-100" role="group">
             <input type="radio" class="btn-check" name="direction" id="dir_in" value="IN"
@@ -149,4 +149,4 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js"></script>
 <script src="{% static 'js/transaction_form.js' %}"></script>
-{% endblock %}
+{% endblock content %}
