--- a/core/templates/core/account_form.html
+++ b/core/templates/core/account_form.html
@@ -14,9 +14,11 @@
 
   <form method="post" id="account-form" novalidate>
     {% csrf_token %}
-    <div class="d-none">
-      {{ form.non_field_errors }}
-    </div>
+    {% if form.non_field_errors %}
+      <div class="alert alert-danger" role="alert">
+        {{ form.non_field_errors }}
+      </div>
+    {% endif %}
 
     {# Campos do formulário #}
     <div class="mb-3">
@@ -55,4 +57,4 @@
     </div>
   </form>
 </div>
-{% endblock %}
+{% endblock content %}
