Add type and period grouping options for transactions mobile view

--- a/core/templates/core/transaction_list_v2.html
+++ b/core/templates/core/transaction_list_v2.html
@@ -282,6 +282,8 @@
           <option value="category">Category</option>
           <option value="month">Month</option>
           <option value="account">Account</option>
+          <option value="type">Type</option>
+          <option value="period">Period</option>
         </select>
       </div>
 
